# code_snippet_manager

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md
.cache/clangd/index/: btree.cpp.81014D8ADA50984D.idx  btree.hpp.0C4695B7C924A8D0.idx  buffer_pool.cpp.8CC64CE25EB8F287.idx  buffer_pool.hpp.6C8BCFEA005781CD.idx  core_types.hpp.EAF57B037F78A68B.idx  crc32.cpp.C940238B72342910.idx  crc32.hpp.5E67B08834526E6F.idx  dam.hpp.7C099135A141A4F9.idx  disk_manager.cpp.B530616BD44C303C.idx  disk_manager.hpp.ABB94809FE2A403A.idx  language_detector.cpp.D0AF90A2D58B0E58.idx  language_detector.hpp.B0B4B1F68743CE14.idx  logger.cpp.B51DC2F60F57EE38.idx  logger.hpp.2DE509B1EA7C3AEB.idx  lru_replacer.cpp.775A79A9FD582FAF.idx  lru_replacer.hpp.865247284B775EBC.idx  main.cpp.0193C86FFD22AA04.idx  page.cpp.A67BB50045ABDBA0.idx  page.hpp.A90EB288A206EE6D.idx  result.hpp.4C8CC46426C5D995.idx  serializer.hpp.C50C06940A27EDFD.idx  snippet_index.cpp.068EED96066C1A6F.idx  snippet_index.hpp.99F3B04810D3330D.idx  snippet_store.cpp.D83DB82115C4C73C.idx  snippet_store.hpp.A1882112164E5CAA.idx  tag_index.cpp.A4F161D1B76A2BA3.idx  tag_index.hpp.A03FE21DA1414EED.idx  test_btree.cpp.121B72B0ED73ADCE.idx  test_buffer_pool.cpp.1284E3F9F7131BE5.idx  test_snippet_store.cpp.0681D99A0CCAA2D7.idx  types.hpp.D9B44116F9D9BBAC.idx  wal.cpp.6CDBCF19E903B801.idx  wal.hpp.6B0F44CA5E0F10E5.idx
cmake/: CompilerSettings.cmake  Dependencies.cmake  Features.cmake  Hnswlib.cmake  LlamaCpp.cmake  Testing.cmake
include/dam/: core_types.hpp  dam.hpp  language_detector.hpp  result.hpp  snippet_index.hpp  snippet_store.hpp  types.hpp
include/dam/index/: tag_index.hpp
include/dam/llm/: error_messages.hpp  llamacpp_provider.hpp  model_discovery.hpp  ollama_provider.hpp  provider.hpp  router.hpp
include/dam/search/: embedder.hpp  inverted_index.hpp  search_router.hpp  tokenizer.hpp  trigram_index.hpp  vector_index.hpp
include/dam/storage/: btree.hpp  buffer_pool.hpp  disk_manager.hpp  lru_replacer.hpp  page.hpp  wal.hpp
include/dam/util/: crc32.hpp  logger.hpp  serializer.hpp  set_operations.hpp
src/dam/: CMakeLists.txt  language_detector.cpp  snippet_index.cpp  snippet_store.cpp
src/dam/index/: tag_index.cpp
src/dam/llm/: error_messages.cpp  llamacpp_provider.cpp  model_discovery.cpp  ollama_provider.cpp  router.cpp
src/dam/search/: embedder.cpp  inverted_index.cpp  search_router.cpp  tokenizer.cpp  trigram_index.cpp  vector_index.cpp
src/dam/storage/: btree.cpp  buffer_pool.cpp  disk_manager.cpp  lru_replacer.cpp  page.cpp  wal.cpp
src/dam/util/: crc32.cpp  logger.cpp
tests/: CMakeLists.txt
tests/dam/: test_btree.cpp  test_buffer_pool.cpp  test_snippet_store.cpp
tools/dam-cli/: CMakeLists.txt  main.cpp
tools/dam-cli/commands/: add_command.cpp  add_command.hpp  command.hpp  edit_command.cpp  edit_command.hpp  exit_codes.hpp  get_command.cpp  get_command.hpp  list_command.cpp  list_command.hpp  rm_command.cpp  rm_command.hpp  search_command.cpp  search_command.hpp  tag_command.cpp  tag_command.hpp
tools/dam-cli/interactive/: debouncer.hpp  interactive_editor.cpp  interactive_editor.hpp  model_picker.cpp  model_picker.hpp  terminal.cpp  terminal.hpp
tools/dam-cli/llm/: claude_client.cpp  claude_client.hpp  input_classifier.cpp  input_classifier.hpp
